tests/ui/transmutability/enums/repr/primitive_reprs_should_have_correct_length.stderr
error[E0277]: `Zst` cannot be safely transmuted into `V0i8`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:46:44
   |
LL |         assert::is_transmutable::<Smaller, Current>();
   |                                            ^^^^^^^ the size of `Zst` is smaller than the size of `V0i8`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
